# vertexai-apps-samples

./: .gitignore  README
CODE_RAG/back/: git_code_rag.py  requirements.txt
CODE_RAG/front/: config.ini
demo-backend-apimeteo/: Solution-script.py  cloud-deploy-temp.yaml  deploy-dev-temp.yaml  deploy-pro-temp.yaml  deploy-pro.yaml  setup.sh
demo-backend-apimeteo/api-weather/: Dockerfile  main.py  requirements.txt
postgres-rag/: DONT UPLOAD  Dockerfile  README.md  pyproject.toml
postgres-rag/app/: indexer.py  server.py
video/front-end/build-deploy/: cloud-deploy-temp.yaml  cloud-deploy.yaml  cloudbuild.yaml  delete.txt  deploy-dev-temp.yaml  deploy-dev.yaml  setup-front-video.sh
video/preprocessing/: credentials.py  event_workflow.yaml  requirements.txt
video/preprocessing/build-deploy/: cloudbuild.yaml  cloudbuild2.yaml  deploy-pre-temp.yaml  deploy-pro-temp.yaml  setup-genai.sh
video/preprocessing/utils/: credentials.py
weather-assistant-langchain/: demo1.py
weather-assistant-langchain/api-weather/: Dockerfile  demo1.py  main.py  requirements.txt
weather-assistant-langchain/build-deploy/: cloud-deploy.yaml  cloudbuild.yaml  setup.sh  skaffold.yaml
weather-assistant-langchain/build-deploy-copy/: cloudbuild.yaml  deploy-pre-temp.yaml  deploy-pre.yaml  setup.sh  skaffold.yaml  variables.py
weather-assistant-langchain/build-deploy-copy/api-weather/: Dockerfile  main.py
weather-assistant-langchain/front-app/: Dockerfile  controller.py  datetimetool.py  locationtool.py  main copy.py  main.py  meteo_retriever.py  requirements.txt
(+2 files in other folders)
