[tool.poetry]
name = "postgres-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = ">=2"
cloud-sql-python-connector = "^1.14.0"
langchain-google-vertexai = "^2.0.8"
langchain-community = "^0.3.8 "
pgvector = "^0.3.6"
pg8000 = ">=1.31.1"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
